the code errors and calculate is correct

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <p class="sub text-present-5 bill__title">Bill</p>
                             <div class="content bill__content">
                                 <img class="icon" src="./images/icon-dollar.svg" alt="Dollar">
-                                <input id="cost-food" type="number" name="amount" class="count bill__amount text-present-3">
+                                <input id="cost-food" type="number" name="amount" class="count bill__amount text-present-3" placeholder="0">
                             </div>
                         </section>
                         <section class="tip">
@@ -33,17 +33,17 @@
                                 <button data-percentage="0.25" class="tip__percentage text-present-3">25%</button>
                                 <button data-percentage="0.50" class="tip__percentage text-present-3">50%</button>
                                 <button data-percentage="custom" class="tip__percentage text-present-3 btn-custom">Custom</button>
-                            </div>
-                            <div style="display: none;" class="content percentage__container bill__content">
-                                <img class="icon icon-percentage" src="./images/percentage_icon.svg" alt="Percentage">
-                                <input id="custon-input" type="number" name="amount" class="count bill__amount text-present-3">
+                                <input id="input-custom" class="count tip__percentage text-present-3 input-custom" type="number" >
                             </div>
                         </section>
                         <section class="people">
-                            <p class="sub text-present-5 people__title">Number of People</p>
+                            <div class="people__text">
+                                <p class="sub text-present-5 people__title">Number of People</p>
+                                <p id="error" class="text-present-5 error">Can't be zero</p>
+                            </div>
                             <div class="content people__content">
                                 <img class="icon" src="./images/icon-person.svg" alt="Person">
-                                <input id="count-people" type="number" name="count" class="count people__count text-present-3">
+                                <input id="count-people" type="number" name="count" class="count people__count text-present-3" placeholder="0">
                             </div>
                         </section>
                     </section>
@@ -55,14 +55,14 @@
                                     <p class="info__title text-present-5">Tip Amount</p>
                                     <p class="person text-present-6">/ person</p>
                                 </div>
-                                <h2 id="per-person" class="data text-present-title">$4.27</h2>
+                                <h2 id="per-person" class="data text-present-title">$0.00</h2>
                             </div>
                             <div class="position">
                                 <div class="info">
                                     <p class="info__title text-present-5">Total</p>
                                     <p class="person text-present-6">/ person</p>
                                 </div>
-                                <h2 id="per-person-total" class="data text-present-title">$32.79</h2>
+                                <h2 id="per-person-total" class="data text-present-title">$0.00</h2>
                             </div>
                             <button class="reset tip__percentage text-present-3">RESET</button>
                         </div>
